--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,7 +57,7 @@ nav,
 .dropdown {
   display: none;
   padding: 1rem;
-  box-shadow: rgb(77 76 114 / 50%) 0px 2px 4px 0px inset;
+  box-shadow: rgba(77, 76, 114, .5) 0px 2px 4px 0px inset;
 }
 
 
