--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css",
-        "variables", "slider";
+        "variables", "breakpoints", "slider";
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,800&display=swap');
 
@@ -12,6 +12,18 @@ body {
   color: #000;
   font-family: "Open Sans";
   font-weight: 400;
+
+  @include tablet-and-wider {
+
+    display: grid;
+    grid-template-areas:
+      "header header"
+      "nav main";
+    grid-template-columns: 68px, auto;
+    grid-template-rows: auto;
+
+  }
+
 }
 
 header,
@@ -19,6 +31,18 @@ nav,
 .alert {
   background-color: $color1;
   color: #fff;
+}
+
+nav {
+  @include tablet-and-wider {
+    grid-area: nav;
+  }
+}
+
+main {
+  @include tablet-and-wider {
+    grid-area: main;
+  }
 }
 
 .alert {
@@ -58,6 +82,16 @@ nav,
   display: none;
   padding: 1rem;
   box-shadow: rgba(77, 76, 114, .5) 0px 2px 4px 0px inset;
+
+  @include tablet-and-wider{
+    // display: block;
+    position: absolute;
+    top: 90px;
+    left: 68px;
+    background-color: #fff;
+    box-shadow: rgba(77, 76, 114, .5) 0 10px 20px 4px;
+    z-index: 1;
+  }
 }
 
 
@@ -72,6 +106,11 @@ nav {
   position: sticky;
   top: 0;
   z-index: 1;
+
+  @include tablet-and-wider {
+    padding: 0;
+  }
+
 }
 
 
@@ -89,12 +128,32 @@ nav ul {
 
 nav ul {
   padding: .5rem;
+
+  @include tablet-and-wider {
+    flex-direction: column;
+    padding: 1rem;
+    position: sticky;
+    top: 0;
+  }
 }
 
 nav li {
   display: inline-block;
   flex-grow: 1;
   text-align: center;
+
+  @include tablet-and-wider {
+    padding: 1rem 0;
+  }
+
+}
+
+header {
+  @include tablet-and-wider {
+    grid-area: header;
+    justify-content: flex-end;
+    height: 90px;
+  }
 }
 
 .avatar {
@@ -112,7 +171,14 @@ h1, h2, h3 {
 }
 
 header h1 sup {
-  font-size: .5rem;
+  font-size: .5em;
+}
+
+h1 {
+  @include tablet-and-wider {
+    margin: .25rem auto .25rem 0;
+    font-size: 1.5rem;
+  }
 }
 
 .alert-space {
@@ -150,6 +216,13 @@ h4 {
 
 .id-badge * {
   margin-left: 15px;
+}
+
+.id-badge h2 {
+  @include tablet-and-wider {
+    font-size: 1.2rem;
+    font-weight: 300;
+  }
 }
 
 .dash-label {
